# clang-compose

./: .clang-format  CMakeLists.txt  README.md
include/compose/: exceptions.hpp  expand_decl_visitor.hpp
src/: compose.cpp  expand_decl_visitor.cpp
tests/: proj1_merged.cpp  run_all.sh  run_proj1.sh
tests/proj1/: compile_commands.json
tests/proj1/include/test_proj/: incl_second.hpp
tests/proj1/src/: main.cpp
tests/test1/: proj1_merged.cpp  run_proj1.sh
tests/test1/proj1/: CMakeLists.txt
tests/test1/proj1/include/test_proj/: incl.hpp  range.hpp
tests/test1/proj1/src/: main.cpp
